# otus_cpp_prof_hw4

./: README.md  doxygen_crawl.html  files.html  index.html  inherit_graph_3.dot  print__ip_8cpp.html  print__ip_8cpp__incl.dot  structis__same__type.html  structis__same__type_3_01std_1_1tuple_3_01_type_00_01_enother_type_00_01_types_8_8_8_01_4_01_4.html  structis__same__type_3_01std_1_1tuple_3_01_type_00_01_enother_type_00_01_types_8_8_8_01_4_01_4__coll__graph.dot  structis__same__type_3_01std_1_1tuple_3_01_type_00_01_type_00_01_types_8_8_8_01_4_01_4.html  structis__same__type_3_01std_1_1tuple_3_01_type_00_01_type_00_01_types_8_8_8_01_4_01_4__coll__graph.dot  structis__same__type_3_01std_1_1tuple_3_01_type_01_4_01_4.html  structis__same__type_3_01std_1_1tuple_3_01_type_01_4_01_4__coll__graph.dot  structis__tuple.html
.github/workflows/: Documentation.yml  cmake-multi-platform.yml
doc/: Doxyfile
doc/html/: annotated.html  classes.html  dir_b2f33c71d4aa5e7af42a1ca61ff5af1b.html  globals.html  globals_func.html  graph_legend.html  hierarchy.html  inherit_graph_0.dot  inherit_graph_1.dot  inherit_graph_2.dot  inherits.html  structis__tuple_3_01std_1_1tuple_3_01_types_8_8_8_01_4_01_4.html  structis__tuple_3_01std_1_1tuple_3_01_types_8_8_8_01_4_01_4__coll__graph.dot  structis__tuple__inherit__graph.dot
doc/latex/: annotated.tex  dir_b2f33c71d4aa5e7af42a1ca61ff5af1b.tex  files.tex  hierarchy.tex  print__ip_8cpp.tex  print__ip_8cpp.tex.tmp  print__ip_8cpp__incl.dot  refman.tex  (+11 more)
search/: all_0.js  all_1.js  all_2.js  functions_1.js
source/: CMakeLists.txt  print_ip.cpp
(+2 files in other folders)
